# tree-sitter-bos

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  c_grammar.js  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
,github/workflows/: ci.yml  publish.yml
.github/workflows/: ci.yml  regenerate.yml  release.yml
bindings/c/: tree-sitter-bos.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bos/: __init__.py  _binding.pyd  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBos/: bos.h
bindings/swift/TreeSitterBosTests/: TreeSitterBosTests.swift
bindings/zig/: root.zig
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: get_call.txt  keyword_statements.txt  preprocessor.txt
