[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bos"
description = "DSL scripting language for controlling unit animations and state. For the Recoil engine."
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "bos"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "ChrisFloofyKitsune", email = "chrisfloofykitsune@gmail.com" }]
requires-python = ">=3.10"
license.text = "GPL-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/chrisfloofykitsune/tree-sitter-bos"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
