[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bos"
description = "DSL scripting language for controlling unit animations and state. Used by the Recoil engine."
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "bos"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "ChrisFloofyKitsune", email = "chrisfloofykitsune@gmail.com" }]
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/chrisfloofykitsune/tree-sitter-bos"

[project.optional-dependencies]
core = ["tree-sitter @ https://github.com/tree-sitter/py-tree-sitter/archive/refs/heads/0.25.zip"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
